Fix a little layout issue at certain widths on the stats page.
Got a little to on fixated on one particular range, sorry.

--- a/nkdsu/static/less/main.less
+++ b/nkdsu/static/less/main.less
@@ -210,10 +210,7 @@ body {
         @media (max-width: @breakpoint) {
           .summary {
             width: 80%;
-
-            p {
-              max-width: 70vw !important;
-            }
+            max-width: 70vw !important;
           }
 
           .value {
@@ -227,6 +224,12 @@ body {
 
         tr.stat {
           td.summary {
+            max-width: 60vw;
+
+            @media (min-width: @max-width) {
+              max-width: 6*(@max-width/10);
+            }
+
             img {
               float: right;
               margin-left: 1em;
@@ -238,11 +241,6 @@ body {
               font-size: .9em;
               overflow: hidden;
               text-overflow: ellipsis;
-              max-width: 50vw;
-
-              @media (min-width: @max-width) {
-                max-width: @max-width/2;
-              }
 
               &.name, &.title {
                 font-size: 1.2em;
